force-app/main/default/objects/Name_Confirmation_Form__c/Name_Confirmation_Form__c.object-meta.xml
<CustomObject>
    <label>Name Confirmation Form</label>
    <nameField>
        <displayFormat>NCF-{0000000}</displayFormat>
        <label>Name Confirmation Form Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Name Confirmation Forms</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>