force-app/main/default/objects/Name_Confirmation_Form__c/fields/Booking__c.field-meta.xml
<CustomField>
    <fullName>Booking__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Booking</label>
    <referenceTo>Booking__c</referenceTo>
    <relationshipLabel>Name Confirmation Forms</relationshipLabel>
    <relationshipName>Name_Confirmation_Forms</relationshipName>
    <type>Lookup</type>
</CustomField>