force-app/main/default/objects/Name_Confirmation_Form__c/fields/NCF_Document_Id__c.field-meta.xml
<CustomField>
    <fullName>NCF_Document_Id__c</fullName>
    <label>NCF Document Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>