force-app/main/default/objects/Name_Confirmation_Form__c/fields/PancardNo__c.field-meta.xml
<CustomField>
    <fullName>PancardNo__c</fullName>
    <label>PancardNo</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>