force-app/main/default/objects/Name_Confirmation_Form__c/fields/RW_Active_NCF__c.field-meta.xml
<CustomField>
    <fullName>RW_Active_NCF__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Active NCF</label>
    <type>Checkbox</type>
</CustomField>