force-app/main/default/objects/Name_Confirmation_Form__c/fields/RW_Allow_Customer_to_Update__c.field-meta.xml
<CustomField>
    <fullName>RW_Allow_Customer_to_Update__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Allow Customer to Update?</label>
    <type>Checkbox</type>
</CustomField>