force-app/main/default/objects/Name_Confirmation_Form__c/fields/RW_Nominee_Name__c.field-meta.xml
<CustomField>
    <fullName>RW_Nominee_Name__c</fullName>
    <label>Nominee Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>