force-app/main/default/objects/Name_Confirmation_Form__c/fields/RW_Nominee_PAN_Number__c.field-meta.xml
<CustomField>
    <fullName>RW_Nominee_PAN_Number__c</fullName>
    <label>Nominee PAN Number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>