force-app/main/default/objects/Name_Confirmation_Form__c/fields/RW_Nominee_Permanent_Address_Line_1__c.field-meta.xml
<CustomField>
    <fullName>RW_Nominee_Permanent_Address_Line_1__c</fullName>
    <label>Nominee Permanent Address Line 1</label>
    <length>60</length>
    <type>Text</type>
</CustomField>