force-app/main/default/objects/Name_Confirmation_Form__c/fields/RW_Nominee_Pincode__c.field-meta.xml
<CustomField>
    <fullName>RW_Nominee_Pincode__c</fullName>
    <label>Nominee Pincode</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>