force-app/main/default/objects/Name_Confirmation_Form__c/fields/RW_POA_Name__c.field-meta.xml
<CustomField>
    <fullName>RW_POA_Name__c</fullName>
    <label>POA Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>