force-app/main/default/objects/Name_Confirmation_Form__c/fields/RW_POA_PAN_Number__c.field-meta.xml
<CustomField>
    <fullName>RW_POA_PAN_Number__c</fullName>
    <label>POA PAN Number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>