force-app/main/default/objects/Name_Confirmation_Form__c/fields/RW_POA_Phone_Number__c.field-meta.xml
<CustomField>
    <fullName>RW_POA_Phone_Number__c</fullName>
    <label>POA Phone Number</label>
    <type>Phone</type>
</CustomField>