force-app/main/default/objects/Name_Confirmation_Form__c/fields/RW_Primary_Aadhar_Number__c.field-meta.xml
<CustomField>
    <fullName>RW_Primary_Aadhar_Number__c</fullName>
    <label>Aadhar Number</label>
    <length>40</length>
    <type>Text</type>
</CustomField>