force-app/main/default/objects/Name_Confirmation_Form__c/fields/RW_Primary_City__c.field-meta.xml
<CustomField>
    <fullName>RW_Primary_City__c</fullName>
    <label>City</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Adilabad</fullName>
            </value>
            <value>
                <fullName>Hanamkonda</fullName>
            </value>
            <value>
                <fullName>Karimnagar</fullName>
            </value>
            <value>
                <fullName>Mahabubnagar</fullName>
            </value>
            <value>
                <fullName>Medak</fullName>
            </value>
            <value>
                <fullName>Nalgonda</fullName>
            </value>
            <value>
                <fullName>Nizamabad</fullName>
            </value>
            <value>
                <fullName>Peddapalli</fullName>
            </value>
            <value>
                <fullName>Sangareddy</fullName>
            </value>
            <value>
                <fullName>Suryapet</fullName>
            </value>
            <value>
                <fullName>Wanaparthy</fullName>
            </value>
            <value>
                <fullName>Warangal</fullName>
            </value>
            <value>
                <fullName>Hyderabad</fullName>
            </value>
            <value>
                <fullName>Secunderabad</fullName>
            </value>
            <value>
                <fullName>Anantapur</fullName>
            </value>
            <value>
                <fullName>Chittoor</fullName>
            </value>
            <value>
                <fullName>Cuddapah</fullName>
            </value>
            <value>
                <fullName>Hindupur</fullName>
            </value>
            <value>
                <fullName>Kurnool</fullName>
            </value>
            <value>
                <fullName>Nandyal</fullName>
            </value>
            <value>
                <fullName>Proddatur</fullName>
            </value>
            <value>
                <fullName>Tirupati</fullName>
            </value>
            <value>
                <fullName>Bhimavaram</fullName>
            </value>
            <value>
                <fullName>Eluru</fullName>
            </value>
            <value>
                <fullName>Gudivada</fullName>
            </value>
            <value>
                <fullName>Gudur</fullName>
            </value>
            <value>
                <fullName>Guntur</fullName>
            </value>
            <value>
                <fullName>Khammam</fullName>
            </value>
            <value>
                <fullName>Machilipatnam</fullName>
            </value>
            <value>
                <fullName>Narasaraopet</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>