force-app/main/default/objects/Name_Confirmation_Form__c/fields/RW_Primary_DOB__c.field-meta.xml
<CustomField>
    <fullName>RW_Primary_DOB__c</fullName>
    <label>DOB</label>
    <required>true</required>
    <type>Date</type>
</CustomField>