force-app/main/default/objects/Name_Confirmation_Form__c/fields/RW_Primary_Email__c.field-meta.xml
<CustomField>
    <fullName>RW_Primary_Email__c</fullName>
    <label>Email</label>
    <required>true</required>
    <type>Email</type>
</CustomField>