force-app/main/default/objects/Name_Confirmation_Form__c/fields/RW_Primary_First_Name__c.field-meta.xml
<CustomField>
    <fullName>RW_Primary_First_Name__c</fullName>
    <label>First Name</label>
    <length>40</length>
    <required>true</required>
    <type>Text</type>
</CustomField>