force-app/main/default/objects/Name_Confirmation_Form__c/fields/RW_Primary_Mobile_Number__c.field-meta.xml
<CustomField>
    <fullName>RW_Primary_Mobile_Number__c</fullName>
    <label>Mobile Number</label>
    <required>true</required>
    <type>Phone</type>
</CustomField>