force-app/main/default/objects/Name_Confirmation_Form__c/fields/RW_Primary_Permanent_Address_Line_1__c.field-meta.xml
<CustomField>
    <fullName>RW_Primary_Permanent_Address_Line_1__c</fullName>
    <label>Permanent Address Line 1</label>
    <length>60</length>
    <required>true</required>
    <type>Text</type>
</CustomField>