force-app/main/default/objects/Name_Confirmation_Form__c/fields/RW_Primary_Permanent_Address_Line_3__c.field-meta.xml
<CustomField>
    <fullName>RW_Primary_Permanent_Address_Line_3__c</fullName>
    <label>Permanent Address Line 3</label>
    <length>40</length>
    <type>Text</type>
</CustomField>