force-app/main/default/objects/Name_Confirmation_Form__c/fields/RW_Verified__c.field-meta.xml
<CustomField>
    <fullName>RW_Verified__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Verified?</label>
    <type>Checkbox</type>
</CustomField>