force-app/main/default/objects/Name_Confirmation_Form__c/fields/Subtype_Of_Applicant__c.field-meta.xml
<CustomField>
    <fullName>Subtype_Of_Applicant__c</fullName>
    <label>Residential Status</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Type_Of_Applicant__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Indian National</fullName>
            </value>
            <value>
                <fullName>Foreign Nationals Of Indian Origin</fullName>
            </value>
            <value>
                <fullName>For NRI</fullName>
            </value>
            <value>
                <fullName>For Company</fullName>
            </value>
            <value>
                <fullName>Partnership Firm</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>